# textagents

./: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/examples/: safety-judge.md  sentiment-analyzer.md
docs/guide/: agent-files.md  cli.md  logfire.md
docs/reference/: api.md  errors.md
examples/: minimal_judge.txt  run_agents.py  run_examples.sh  safety_judge.txt  sentiment_analyzer.txt
examples/inputs/: sample_model_output.txt
src/textagents/: __init__.py  agent.py  cli.py  errors.py  input_handler.py  loader.py  model_builder.py  parser.py  validator_builder.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_cli.py  test_errors.py  test_input_handler.py  test_loader.py  test_model_builder.py  test_parser.py  test_real_api.py  test_validator_builder.py
tests/fixtures/invalid/: invalid_type.txt  missing_model.txt  no_output_type.txt  no_placeholders.txt
tests/fixtures/valid/: full_spec.txt  minimal.txt
